# sfmltest

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: Board.cpp  Board.h  Cell.cpp  Renderer.cpp  Renderer.h  main.cpp
